<resources>
    <string name="app_name">e办公</string>
    <string name="app_intro">让办公更简单</string>
    <string name="app_right">love-cookies\nCopyright © 2016 XIEKUN .All Rights Reserved</string>

    <string name="exit_tip">再按一次退出</string>

    <string name="wait_text">请稍后...</string>

    <string name="waiting_tip">数据加载中...</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新...</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_nodate">已加载全部</string>

    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="username_text">账户：</string>
    <string name="username_text_hint">请输入账户</string>
    <string name="password_text">密码：</string>
    <string name="password_text_hint">请输入密码</string>
    <string name="nickname_text">昵称：</string>
    <string name="nickname_text_hint">请输入昵称</string>
    <string name="login_btn_text">登录</string>
    <string name="register_btn_text">注册</string>
    <string name="register_success_text">注册成功，现在你可以登录啦</string>
    <string name="register_failed_text">注册失败</string>
    <string name="login_failed_text">登录失败</string>
    <string name="logout_btn_text">登出</string>
    <string name="re_account_exist">账户已存在</string>

    <string name="sign_in">签到</string>
    <string name="sign_in_success_tip">签到成功</string>
    <string name="sign_in_failed_tip">签到失败</string>
    <string name="sign_out">签退</string>
    <string name="sign_out_success_tip">签退成功</string>
    <string name="sign_out_failed_tip">签退失败</string>

    <string name="project_title">项目</string>
    <string name="official_title">公文</string>
    <string name="notice_title">通知</string>
    <string name="enterprise_title">企业</string>
    <string name="meeting_title">会议</string>
    <string name="attendance_title">出勤</string>

    <string name="publish_btn_text">发布</string>
    <string name="initiate_btn_text">发起</string>

    <string name="add_btn_text">添加</string>
    <string name="project_detail_title">项目详情</string>
    <string name="project_log_title">项目日志</string>
    <string name="add_project_log_title">添加项目日志</string>
    <string name="log_content_hint">请输入日志内容</string>
    <string name="add_project_log_success_tip">添加项目日志成功</string>

    <string name="enterprise_detail_title">企业详情</string>

    <string name="submit_btn_text">确定</string>

    <string name="add_notice_title">添加通知</string>
    <string name="notice_title_hint">请输入通知标题</string>
    <string name="notice_content_hint">请输入通知内容</string>
    <string name="add_notice_success_tip">添加通知成功</string>

    <string name="official_detail_title">公文详情</string>

    <string name="add_meeting_title">发起会议</string>
    <string name="meeting_subject_hint">请输入会议主题</string>
    <string name="meeting_time_hint">请选择会议时间</string>
    <string name="add_meeting_success_tip">发起会议成功</string>
</resources>
