<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:miv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/view_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- 用户信息栏 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/theme_color">

                <ImageView
                    android:id="@+id/index_top_bg_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:alpha="0.8"/>

                <ImageView
                    android:id="@+id/user_hard_iv"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:src="@mipmap/user_img"/>

                <TextView
                    android:id="@+id/user_nickname_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/user_hard_iv"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="24dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="用户昵称"/>

                <CheckBox
                    android:id="@+id/sign_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="30dp"
                    android:button="@null"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:background="@drawable/sign_btn_bg"
                    android:padding="6dp"/>

            </RelativeLayout>

            <!-- 功能模块栏 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <com.love_cookies.e_office.View.Widget.MenuItemView
                        android:id="@+id/project_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        miv:Icon="@mipmap/icon_project"
                        miv:Title="@string/project_title"/>

                    <com.love_cookies.e_office.View.Widget.MenuItemView
                        android:id="@+id/official_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        miv:Icon="@mipmap/icon_official"
                        miv:Title="@string/official_title"/>

                    <com.love_cookies.e_office.View.Widget.MenuItemView
                        android:id="@+id/notice_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        miv:Icon="@mipmap/icon_notice"
                        miv:Title="@string/notice_title"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <com.love_cookies.e_office.View.Widget.MenuItemView
                        android:id="@+id/enterprise_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        miv:Icon="@mipmap/icon_enterprise"
                        miv:Title="@string/enterprise_title"/>

                    <com.love_cookies.e_office.View.Widget.MenuItemView
                        android:id="@+id/meeting_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        miv:Icon="@mipmap/icon_meeting"
                        miv:Title="@string/meeting_title"/>

                    <com.love_cookies.e_office.View.Widget.MenuItemView
                        android:id="@+id/attendance_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        miv:Icon="@mipmap/icon_attendance"
                        miv:Title="@string/attendance_title"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
